--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The Async Force Ep 2</title>
+  <title>The Async Froce Ep 2</title>
   <meta name="viewport" content="width=device-width" />
 </head>
 <body>
-  <h1>The Async Force Ep 2</h1>
+  <h1>The Async Frocioux Ep 2</h1>
   <select name="resourceType" id="resourceType">
     <option value="people">Person</option>
     <option value="planets">Planet</option>
